--- a/mp/index.html
+++ b/mp/index.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/parallax.css"/>
 	<link rel="stylesheet" href="css/examples.css" type="text/css">
 	<script type="text/javascript">
@@ -150,10 +150,9 @@
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
 						<p class="numbers-value"><span class="incrementalNumber" set-time="100" data-value="7"></span></p>
 						<img src="images/underline.png" />
-						
 						<p class="numbers-title">лет успешной работы</p>
 					</div>
-					
+
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
 						<p class="numbers-value"><span class="incrementalNumber" set-time="1" data-value="1087"></span></p>
 						<img src="images/underline.png" />
