--- a/self/index.html
+++ b/self/index.html
@@ -22,8 +22,8 @@
 
         <!-- NAVIGATION -->
 		<div class="container-fluid">
-			<div class="navbar navbar-default navbar-fixed-top">
-				<div class="container">
+			<div class="navbar navbar-default navbar-fixed-top" style="background: #fff;">
+				<div id="header"  class="container text-uppercase">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
                             <span class="sr-only">Открыть навигацию</span>
@@ -35,7 +35,7 @@
                             <img src="images/logo_up-site-w.png"/>
                         </a>
                     </div>
-                    <div class="collapse navbar-collapse" id="responsive-menu">
+                    <div  class="collapse navbar-collapse" id="responsive-menu">
                         <ul class="nav navbar-nav">
                             <li><a href="#about-company-in-numbers">О компании</a></li>
                             <li><a href="#adaptation">Устройства</a></li>
@@ -63,24 +63,27 @@
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img src="images/Rectangle-1.jpg" style="height: 475px" alt="photo1">
-                    <div class="carousel-caption">
-                        <h2>Хотите туберкулез ?</h2>
-                        <h3>
-                            Заходите сука к нам<br>
-                            Отхватите пиздюлей
-                        </h3>
+                    <div class="carousel-caption bgtext">
+                        <h2>нет продаж с мобильных устройств?</h2>
+                        <h3>По статистике из всей онлайн аудитории украины 28,2%<br/><br/>
+                            пользователи мобильных устройств</h3>
+
                     </div>
                 </div>
                 <div class="item">
                     <img src="images/Rectangle-7.jpg" style="height: 475px" alt="photo1">
-                    <div class="carousel-caption">
-                        хуй2
+                    <div class="carousel-caption bgtext">
+                        <h2>нет продаж с мобильных устройств?</h2>
+                        <h3>По статистике из всей онлайн аудитории украины 28,2%<br/><br/>
+                            пользователи мобильных устройств</h3>
                     </div>
                 </div>
                 <div class="item">
                     <img src="images/Rectangle-10.jpg" style="height: 475px" alt="photo1">
-                    <div class="carousel-caption">
-                        хуй3
+                    <div class="carousel-caption bgtext">
+                        <h2>нет продаж с мобильных устройств?</h2>
+                        <h3>По статистике из всей онлайн аудитории украины 28,2%<br/><br/>
+                            пользователи мобильных устройств</h3>
                     </div>
                 </div>
             </div>
@@ -91,32 +94,32 @@
             <h2 class="text-uppercase">О компании в цифрах</h2>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                    <p>
-                        <span class="incrementalNumber" set-time="100" data-value="9"></span>
+                    <p class="numbers-value">
+                        <span class="incrementalNumber" set-time="100" data-value="7"></span>
                     </p>
-                    <!--<img src="images/underline.png" />-->
-                    <p>лет успешной работы</p>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                    <p>
-                        <span class="incrementalNumber" set-time="1" data-value="1097"></span>
-                    </p>
-                    <!--<img src="images/underline.png" />-->
-                    <p>дополнительных клиентов</p>
+                  <img src="images/underline.png" />
+                    <p class="numbers-title">лет успешной работы</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
                     <p class="numbers-value">
-                        <span class="incrementalNumber" set-time="100" data-value="19"></span>
+                        <span class="incrementalNumber" set-time="1" data-value="1097"></span>
                     </p>
-                    <!--<img src="images/underline.png" />-->
-                    <p>представительств по всему миру</p>
+                    <img src="images/underline.png" />
+                    <p class="numbers-title">дополнительных клиентов</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                    <p>
-                        <span class="incrementalNumber" set-time="100" data-value="459"></span>
+                    <p class="numbers-value">
+                        <span class="incrementalNumber" set-time="100" data-value="11"></span>
                     </p>
-                    <!--<img src="images/underline.png" />-->
-                    <p>крупных проектов</p>
+                    <img src="images/underline.png" />
+                    <p class="numbers-title">представительств по всему миру</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
+                    <p class="numbers-value">
+                        <span class="incrementalNumber" set-time="100" data-value="354"></span>
+                    </p>
+                    <img src="images/underline.png" />
+                    <p class="numbers-title">крупных проектов</p>
                 </div>
             </div>
         </div>
@@ -143,7 +146,7 @@
             </div>
         </div>
 
-        <div class="container-fluid text-center text-uppercase" id="mobile-optimization-profit" style="background: #48A1D7; color: #ffffff">
+        <div class="container-fluid text-center text-uppercase" id="mobile-optimization-profit" >
             <h2 class="text-center">
                 что дает мобильная оптимизация:
             </h2>
@@ -157,15 +160,144 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-lg-offset-0 col-md-5  col-sm-5 col-xs-5" id="mobile-optimization-profit-right">
-                    <img src="images/back.png" />
+                    <img src="images/back-copy.png" />
                     <button type="button">Прибыль</button>
                 </div>
             </div>
         </div>
-
-        <div class="container-fluid text-center text-uppercase" id="mobile-optimization-zakazat">
+        <!--<section id="section-mobile-optimization-zakazat"> -->
+            <div class="container-fluid text-center text-uppercase" id="mobile-optimization-zakazat" >
             <h2>закажи мобильную адаптацию от up-site прямо сейчас!</h2>
             <button  type="button"  data-toggle="modal" data-target=".bs-example-modal-sm" >Заказать</button>
+            </div>
+
+            <!-- </section> -->
+        <div class="spacer container-fluid  text-uppercase" id="auditory">
+            <div class="row">
+                <div class=" text-center col-lg-5  col-lg-offset-1  col-md-offset-1  col-md-5  col-sm-5 col-sm-offset-1
+					col-xs-12" id="auditory-left">
+                    <h2>Ваша целевая аудитория</h2>
+                    <center><ul>
+                        <li>Жители крупных городов?</li>
+                        <li>Возраст 18-45 лет?</li>
+                        <li>Достаток средний и выше?</li>
+                    </ul></center>
+                </div>
+                <div class="col-lg-4 col-lg-offset-0 col-md-offset-0 col-md-5  col-sm-5 col-sm-offset-0 col-xs-12 text-center" id="auditory-right"
+                >
+                    <h2>Ваша онлайн аудитрия</h2>
+                    <img src="images/Ellipse-1-copy-21.png" /><span id="pos-56">56%</span>
+                    <p>56% - пользователи мобильных устройств</p>
+                </div>
+            </div>
+            </div>
+            <div class="container-fluid  text-uppercase" id="our-clients">
+                <h2>Наши клиенты</h2>
+                <div class="row">
+                    <div id="ukr-eko-prom-block" class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><img id="ukr-eko-prom" style="margin-top: 15px;" src="images/Layer-1.png"/></div>
+                    <div id="upsales-block" class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><img id="upsales" src="images/logo-up-sales.png"/></div>
+                    <div id="desire-block" class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><img id="desire" src="images/logo-(1).png"/></div>
+                </div>
+            </div>
+
+
+            <div class="container-fluid " id="add-love-bottom">
+                <h2>Добавляем в нашу работу любви и креатива</h2>
+            </div>
+        <div class="container-fluid" id="thanks">
+            <h2>Благодарности</h2>
+            <div class="row">
+
+                <div class="col-lg-6   col-md-6 col-sm-6 col-xs-12">
+                    <div class="row">
+                        <div class="col-lg-4   col-md-4 col-sm-12 col-xs-12">
+                            <img class="author-foto" src="images/Ellipse-2.png">
+                        </div>
+                        <div class="col-lg-8   col-md-8 col-sm-12 col-xs-12">
+                            <p class="thanks-author-name">Алексей, 42</p>
+                            <p class="thanks-author-txt">Компания отлично справилась с работой, на мой сайт удобно теперь заходить с любых устройств, оличная команда профессионалов, всем рекомендую!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="row">
+                        <div class="col-lg-4   col-md-4 col-sm-12 col-xs-12">
+                            <img class="author-foto" src="images/Ellipse-2-copy.png">
+                        </div>
+                        <div class="col-lg-8   col-md-8 col-sm-12 col-xs-12">
+                            <p class="thanks-author-name">Алексей, 42</p>
+                            <p class="thanks-author-txt">Компания отлично справилась с работой, на мой сайт удобно теперь заходить с любых устройств, оличная команда профессионалов, всем рекомендую!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-	</body>
+        <div class="container-fluid" id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1373.9295847978537!2d30.748396208274713!3d46.47129744385495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c63182e89f1339%3A0x52a5175530c1ef29!2z0LLRg9C70LjRhtGPINCS0LXQu9C40LrQsCDQkNGA0L3QsNGD0YLRgdGM0LrQsCwg0J7QtNC10YHQsCwg0J7QtNC10YHRjNC60LAg0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1469645384519" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        <div class="container-fluid" id="popular-services">
+            <h4 class="text-uppercase text-center">Популярные услуги<h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <img src="images/Rectangle-17.png" />
+                            <p>Партнерская программа</p>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <img src="images/Rectangle-17-copy1.png" />
+                            <p>Нейминг</p>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <img src="images/Rectangle-17-copy-2.png" />
+                            <p>SMM</p>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div class="container-fluid" id="footer">
+            <div class="navbar navbar-default" id="footer-nav-bar">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu2">
+                            <span class="">Меню</span>
+
+                        </button>
+                    </div>
+                    <div class="" id="footer-menu">
+                        <div class="collapse navbar-collapse" id="responsive-menu2">
+                            <ul class="nav navbar-nav">
+                                <li><a href="#about-company-in-numbers">О компании</a></li>
+                                <li><a href="#adaptation">Устройства</a></li>
+                                <li><a href="#mobile-optimization-profit">Преимущества</a></li>
+                                <li><a href="#auditory">Целевая аудитория</a></li>
+                                <li><a href="#our-clients">Клиенты</a></li>
+                                <li><a href="#thanks">Отзывы</a></li>
+                                <li><a href="#map">Контакты</a></li>
+                            </ul>
+                        </div>
+                        <div class="container">
+                            <div class="" id="footer-img" style="position: relative;">
+                                <ul class="nav navbar-nav">
+                                    <li><a href="https://www.facebook.com/myupsite" target="_blank"><img id="fcb-icon" src="images/facebook-drawn-logo.png"/></a>
+                                      <img src="images/instagram-draw-logo.png"/>
+                                        <p class="text-center">Сделано с любовью</p></li>
+                                    <li id="heart-img">
+                                        <button style="position: relative; padding: 0; border: none; background: #fff; outline: none;" type="button" class="" data-container="body" data-toggle="popover" data-placement="top" 	 id="heart-btn"
+                                                data-content="Всегда делай добрые дела и начни прямо сейчас!" >
+                                            <img src="images/pink-heart-md.png" style="outline: none;"><p>Нажми<br/> на<br/> меня</p>
+
+                                        </button>
+
+                                    </li>
+                                    <li><a href="https://vk.com/up_site_co" target="_blank"><img id="vk-icon" src="images/vk-draw-logo.png"/></a>
+                                        <a href="https://www.youtube.com/user/myupsite" target="_blank"><img src="images/youtube-logo.png"/></a>
+                                        <p class="text-center">Up-Site</p></li>
+
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+
+    </body>
 </html>
