--- a/self/index.html
+++ b/self/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
         <!--<section id="section-mobile-optimization-zakazat"> -->
-            <div class="container-fluid text-center text-uppercase" id="mobile-optimization-zakazat" >
+            <div class="container-fluid text-center text-uppercase" id="mobile-optimization-zakazat" style="background-image: url(images/Rectangle-181.jpg)" >
             <h2>закажи мобильную адаптацию от up-site прямо сейчас!</h2>
             <button  type="button"  data-toggle="modal" data-target=".bs-example-modal-sm" >Заказать</button>
             </div>
